Add property section with two way data binding

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <script src="https://kit.fontawesome.com/43612d9024.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
   <meta charset="utf-8">
   <title>PropertyHub</title>
   <base href="/">
